--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   },
   "homepage": "https://github.com/jverploeg/fec#readme",
   "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "puppeteer": "^8.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "store2": "^2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -32,6 +36,7 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.1",
+    "enzyme": "^3.11.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -41,8 +46,10 @@
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
+    "nodemon": "^2.0.7",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.2",
