--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
+    "react-icons": "^4.2.0",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.2",
