added subcomponent static structure to product overview

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
       "node_modules",
       "bower_components",
       "shared",
-      "client"
+      "src"
     ],
     "moduleNameMapper": {
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
