--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
-// babel core needs to know that it has these plugins, defined below
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "10"
+        }
+      }
+    ],
+    "@babel/preset-react"
+  ]
 }
