--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-loader": "^8.2.2",
     "bulma": "^0.9.2",
     "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^7.1.2",
     "css-loader": "^5.1.1",
     "enzyme": "^3.11.0",
     "eslint": "^7.21.0",
@@ -49,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "express-static-gzip": "^2.1.1",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
