--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "bulma": "^0.9.2",
+    "bulma-modal-fx": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^7.1.2",
     "css-loader": "^5.1.1",
